# ScanLLM-

./: .gitignore  COMMENCER_ICI.md  README.MD  cleanup.ps1  convert_to_csv.ps1  python orchestrator.py  requirements.txt  run_test.py  startup.sh  test_scan.ps1  test_scan_csv.ps1
.github/workflows/: azure-deploy.yml  azure-static-web-apps-salmon-river-0b08c930f.yml  main_llm-security-plateform.yml
analyzer/: analyser.py  requirements.txt
infra/: azure-pipelines.yml
llm-security-platform/: .env.example  ACCOMPLISSEMENTS_COMPLETS.md  COMMANDES_ESSENTIELLES.md  COMMANDES_RAPIDES.md  COMMENT_COMMENCER.md  COMMENT_TESTER.md  CVE_SOLUTIONS_COMPLETE.md  DASHBOARD_COMPLETE.md  DEPLOIEMENT_COMPLET.md  DEPLOYMENT_REPORT.md  DOCUMENTATION_TESTS_CREEE.md  EXECUTER_TESTS.md  FRONTEND_COMPLETE.md  FRONTEND_SETUP.md  GITHUB_ACTIONS_GUIDE.md  GUIDE_DEMARRAGE_RAPIDE.md  GUIDE_TEST.md  GUIDE_TEST_SIMPLE.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS_COMPLETE.md  INDEX_TESTS.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_DEPLOYMENT_GUIDE.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE_2_COMPLETE.md  PLATFORM_SUMMARY.md  QUICKSTART.md  QUICK_START_FRONTEND.md  README.md  README_PHASE2.md  REFONTE_UI.md  RESOLUTION_BUILD_GITHUB.md  RESUME_DOCUMENTATION_TESTS.md  RESUME_FINAL.md  ROADMAP_COMPLETE.md  SECURITY_FIXES.md  SOLUTIONS_NAVIGATION_COMPLETE.md  (+28 more)
llm-security-platform/.github/workflows/: azure-deploy.yml  build.yml  docker-build.yml  main_llm-security-plateform.yml  security-scan.yml
llm-security-platform/alerting/: __init__.py  alerting.py
llm-security-platform/analyzer/: __init__.py  analyzer.py  csv_exporter.py  requirements.txt  scoring.py
llm-security-platform/config/: scan_schedule.json
llm-security-platform/data/: solutions_database.py
llm-security-platform/data_store/: scans.json
llm-security-platform/frontend/: README_NEW_UI.md  SWITCH_UI.ps1  package-lock.json  package.json  tailwind.config.js
llm-security-platform/frontend/src/: App.jsx  index.js
llm-security-platform/frontend/src/components/: ComplianceReport.jsx  Feedback.jsx  FeedbackForm.jsx  NavbarNew.jsx  ScanForm.jsx  ScanResults.jsx  SystemScanResults.jsx
llm-security-platform/frontend/src/contexts/: LanguageContext.jsx
llm-security-platform/frontend/src/i18n/: translations.js
llm-security-platform/frontend/src/pages/: About.jsx  Dashboard.jsx  History.jsx  HomeNew.jsx  HomeOld.jsx  NewScan.jsx  ScanDetails.jsx  ScanSystem.jsx  Settings.jsx  Solutions.jsx  SystemScanDetails.jsx
llm-security-platform/frontend/src/services/: api.js  auth.js  cveSolutionsService.js  dashboardService.js  mappingService.js  pdfExportService.js  systemScanService.js
llm-security-platform/frontend_src/: App.jsx  index.css
llm-security-platform/frontend_src/components/: LoadingSpinner.jsx  Navbar.jsx  ScanForm.jsx  ScanResults.jsx  SolutionCard.jsx
llm-security-platform/frontend_src/pages/: Home.jsx  Solutions.jsx
llm-security-platform/frontend_src/services/: api.js
llm-security-platform/infra/: azure-pipelines.yml
llm-security-platform/logger/: __init__.py  immutable_logger.py
llm-security-platform/logs/test_immutable/: hash_chain.json  security_audit_20251019.jsonl
llm-security-platform/orchestrator/: __init__.py  config.yaml  orchestrator.py  requirements.txt
llm-security-platform/orchestrator/tests/: __init__.py  extraction_probe.py  fingerprinting.py  prompt_injection.py  rag_audit.py  role_sensitivity.py  safety_bypass.py  structural_probe.py
llm-security-platform/runners/: .gitignore  Dockerfile  __init__.py  docker-compose.yml  requirements.txt  runner.py
llm-security-platform/security/: __init__.py  rbac.py  secrets_manager.py
llm-security-platform/test_results/: test_scan_20251019_192732.json  test_scan_20251019_194130.json
logs/test_immutable/: hash_chain.json  security_audit_20251019.jsonl
orchestrator/: orchestrator.py  requirement.txt
orchestrator/tests/: structural_probe.py
test_results/: test_scan_20251019_193031.json
